# synapse

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  app.py  cli.py  flake.nix  kokoro_tts.py  main.py  providers.py  pyproject.toml  whisper.py
