[project]
name = "synapse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "flask>=3.1.0",
    "kokoro>=0.9.4",
    "numpy>=2.2.5",
    "soundfile>=0.13.1",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
    "python-lsp-server>=1.12.2",
    "ruff>=0.11.9",
]
