[project]
name = "synapse"
version = "0.1.0"
description = "AI Inference Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.0",
    "huggingface-hub>=0.36.0",
    "marimo>=0.19.1",
    "supertonic>=1.0.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "python-lsp-server>=1.14.0",
    "ruff>=0.14.11",
]
